--- a/cart.html
+++ b/cart.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>產品列表</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
       crossorigin="anonymous"
+    />
+    <link
+      href="
+https://cdn.jsdelivr.net/npm/vue-loading-overlay@6/dist/css/index.css
+"
+      rel="stylesheet"
     />
     <link
       rel="stylesheet"
@@ -21,6 +27,7 @@
 
   <body>
     <div id="app">
+      <loading v-model:active="isLoading"></loading>
       <div class="container">
         <div class="mt-4">
           <!-- 產品Modal -->
@@ -28,6 +35,9 @@
             ref="modal"
             :temp-content="tempProduct"
             :add-cart="addCart"
+            :id="productId"
+            :loading-status="loadingStatus
+            "
           ></use-product-modal>
           <!-- 產品Modal -->
 
@@ -64,16 +74,22 @@
                 </td>
                 <td>{{ item.title }}</td>
                 <td>
-                  <div class="h5">{{ item.price }} 元</div>
-                  <del class="h6">原價 {{ item.origin_price }} 元</del>
-                  <div class="h5">現在只要 {{ item.price }} 元</div>
+                  <!-- 價格相同才顯示 -->
+                  <div class="h5" v-if="item.price === item.origin_price">
+                    {{ item.price }} 元
+                  </div>
+                  <!-- 否則顯示這裡 -->
+                  <template v-else>
+                    <del class="h6">原價 {{ item.origin_price }} 元</del>
+                    <div class="h5">現在只要 {{ item.price }} 元</div>
+                  </template>
                 </td>
                 <td>
                   <div class="btn-group btn-group-sm">
                     <button
                       type="button"
                       class="btn btn-outline-secondary"
-                      @click="viewProduct(item.id)"
+                      @click="openModal(item.id)"
                       :disabled="loadingStatus.loadingItem===item.id"
                     >
                       <i
@@ -138,7 +154,9 @@
                   </td>
                   <td>
                     {{ item.product.title }}
-                    <div class="text-success">已套用優惠券</div>
+                    <div class="text-success" v-if="item.coupon">
+                      已套用優惠券
+                    </div>
                   </td>
                   <td>
                     <!-- @blur 失去焦點後才執行 -->
@@ -159,8 +177,12 @@
                     </div>
                   </td>
                   <td class="text-end">
-                    <small class="text-success">折扣價：</small>
-                    {{ item.final_total }}
+                    <small
+                      class="text-success"
+                      v-if="cart.final_total !== cart.total"
+                      >折扣價：</small
+                    >
+                    ${{ item.final_total }}
                   </td>
                 </tr>
               </template>
@@ -170,7 +192,7 @@
                 <td colspan="3" class="text-end">總計</td>
                 <td class="text-end">${{ cart.total }}</td>
               </tr>
-              <tr>
+              <tr v-if="cart.final_total !== cart.total">
                 <td colspan="3" class="text-end text-success">折扣價</td>
                 <td class="text-end text-success">${{ cart.final_total }}</td>
               </tr>
@@ -283,6 +305,9 @@
     <script src="https://unpkg.com/vee-validate@next"></script>
     <script src="https://unpkg.com/@vee-validate/i18n@4.1.0"></script>
     <script src="https://unpkg.com/@vee-validate/rules"></script>
+    <script src="
+https://cdn.jsdelivr.net/npm/vue-loading-overlay@6
+"></script>
     <script src="./js/cart.js" type="module"></script>
   </body>
 </html>
