fix: 地區欄位驗證文字

--- a/cart.html
+++ b/cart.html
@@ -262,7 +262,7 @@ https://cdn.jsdelivr.net/npm/vue-loading-overlay@6/dist/css/index.css
             <div class="mb-3">
               <label for="city" class="form-label">地區</label>
               <v-field
-                id="name"
+                id="city"
                 name="地區"
                 class="form-control"
                 :class="{ 'is-invalid': errors['地區'] }"
@@ -276,7 +276,7 @@ https://cdn.jsdelivr.net/npm/vue-loading-overlay@6/dist/css/index.css
                 <option value="高雄市">高雄市</option>
               </v-field>
               <error-message
-                name="Email"
+                name="地區"
                 class="invalid-feedback"
               ></error-message>
             </div>
